@@ -1,3 +1,5 @@
+/*	$NetBSD: regex2.h,v 1.5 1995/02/27 13:29:40 cgd Exp $	*/
+
 /*-
  * Copyright (c) 1992, 1993, 1994 Henry Spencer.
  * Copyright (c) 1992, 1993, 1994
